src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_OLD__c</fullName>
        <externalId>true</externalId>
        <label>Account # (OLD)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand_Competitors__c</fullName>
        <label>Brand Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ariat</fullName>
                </value>
                <value>
                    <fullName>Bulwark</fullName>
                </value>
                <value>
                    <fullName>CAT</fullName>
                </value>
                <value>
                    <fullName>Cinch</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Dickies</fullName>
                </value>
                <value>
                    <fullName>Dragon Wear</fullName>
                </value>
                <value>
                    <fullName>DriFire</fullName>
                </value>
                <value>
                    <fullName>Key</fullName>
                </value>
                <value>
                    <fullName>Kuhl</fullName>
                </value>
                <value>
                    <fullName>Lapco</fullName>
                </value>
                <value>
                    <fullName>Lee</fullName>
                </value>
                <value>
                    <fullName>Levi</fullName>
                </value>
                <value>
                    <fullName>North Face</fullName>
                </value>
                <value>
                    <fullName>NSA</fullName>
                </value>
                <value>
                    <fullName>Private label</fullName>
                </value>
                <value>
                    <fullName>Rasco</fullName>
                </value>
                <value>
                    <fullName>RedKap</fullName>
                </value>
                <value>
                    <fullName>Riverside/Affinity</fullName>
                </value>
                <value>
                    <fullName>Tecgen</fullName>
                </value>
                <value>
                    <fullName>Tyndale</fullName>
                </value>
                <value>
                    <fullName>Under Armour</fullName>
                </value>
                <value>
                    <fullName>Walls</fullName>
                </value>
                <value>
                    <fullName>Workrite</fullName>
                </value>
                <value>
                    <fullName>Wrangler/Riggs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA - Catalog</fullName>
                </value>
                <value>
                    <fullName>DC - Discount Sales</fullName>
                </value>
                <value>
                    <fullName>DP - Department Store</fullName>
                </value>
                <value>
                    <fullName>EM - Employee</fullName>
                </value>
                <value>
                    <fullName>FS - Farm Store</fullName>
                </value>
                <value>
                    <fullName>GS - General Store</fullName>
                </value>
                <value>
                    <fullName>HA - House Account</fullName>
                </value>
                <value>
                    <fullName>HW - Hardware</fullName>
                </value>
                <value>
                    <fullName>ID - Industrial</fullName>
                </value>
                <value>
                    <fullName>IN - International</fullName>
                </value>
                <value>
                    <fullName>IS - Inside Sales</fullName>
                </value>
                <value>
                    <fullName>IT - Internal</fullName>
                </value>
                <value>
                    <fullName>MC - Misc</fullName>
                </value>
                <value>
                    <fullName>OD - Outdoor</fullName>
                </value>
                <value>
                    <fullName>SG - Sporting Goods</fullName>
                </value>
                <value>
                    <fullName>SP - Special</fullName>
                </value>
                <value>
                    <fullName>SR - Sales Representative</fullName>
                </value>
                <value>
                    <fullName>WB - Web/E-Commerce</fullName>
                </value>
                <value>
                    <fullName>WC - Work Wear</fullName>
                </value>
                <value>
                    <fullName>WS - Wholesale.com</fullName>
                </value>
                <value>
                    <fullName>WW - Western</fullName>
                </value>
                <value>
                    <fullName>DI - Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Won_Oppties__c</fullName>
        <inlineHelpText>Total number of closed-won opportunities for this account</inlineHelpText>
        <label># Closed Won Oppties</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>6 - Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Competing_Lines__c</fullName>
        <inlineHelpText>Select one or more competitors that this distributor carries</inlineHelpText>
        <label>Competing Lines</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aramark</fullName>
                </value>
                <value>
                    <fullName>Bulwark</fullName>
                </value>
                <value>
                    <fullName>Cintas</fullName>
                </value>
                <value>
                    <fullName>Dakota</fullName>
                </value>
                <value>
                    <fullName>DriFire</fullName>
                </value>
                <value>
                    <fullName>G&amp;K</fullName>
                </value>
                <value>
                    <fullName>Lapco</fullName>
                </value>
                <value>
                    <fullName>NSA</fullName>
                </value>
                <value>
                    <fullName>Rasco</fullName>
                </value>
                <value>
                    <fullName>Riverside</fullName>
                </value>
                <value>
                    <fullName>Tyndale</fullName>
                </value>
                <value>
                    <fullName>Unifirst</fullName>
                </value>
                <value>
                    <fullName>Walls</fullName>
                </value>
                <value>
                    <fullName>Workrite</fullName>
                </value>
                <value>
                    <fullName>Wrangler</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Notes__c</fullName>
        <inlineHelpText>Enter notes on competitors and sales volumes, if known</inlineHelpText>
        <label>Competitor Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <inlineHelpText>Date current contract expires.  Updated when an opportunity is Closed Won or Lost, if filled in.</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Annual_Spend__c</fullName>
        <inlineHelpText>Current annual spend, either with Carhartt or a competitor.  Will be updated automatically with the opportunity amount when an opportunity is Closed Won or Closed Lost.</inlineHelpText>
        <label>Current Annual Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Notes__c</fullName>
        <label>Current Contract Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Supplier__c</fullName>
        <label>Primary Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aramark</fullName>
                </value>
                <value>
                    <fullName>Bulwark</fullName>
                </value>
                <value>
                    <fullName>Carhartt</fullName>
                </value>
                <value>
                    <fullName>Cintas</fullName>
                </value>
                <value>
                    <fullName>Dakota</fullName>
                </value>
                <value>
                    <fullName>DriFire</fullName>
                </value>
                <value>
                    <fullName>G&amp;K</fullName>
                </value>
                <value>
                    <fullName>Lapco</fullName>
                </value>
                <value>
                    <fullName>NSA</fullName>
                </value>
                <value>
                    <fullName>Rasco</fullName>
                </value>
                <value>
                    <fullName>Riverside</fullName>
                </value>
                <value>
                    <fullName>Tyndale</fullName>
                </value>
                <value>
                    <fullName>Unifirst</fullName>
                </value>
                <value>
                    <fullName>Walls</fullName>
                </value>
                <value>
                    <fullName>Workrite</fullName>
                </value>
                <value>
                    <fullName>Wrangler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Suppliers__c</fullName>
        <label>Current Suppliers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aramark</fullName>
                </value>
                <value>
                    <fullName>Bulwark</fullName>
                </value>
                <value>
                    <fullName>Carhartt</fullName>
                </value>
                <value>
                    <fullName>Cintas</fullName>
                </value>
                <value>
                    <fullName>Dakota</fullName>
                </value>
                <value>
                    <fullName>DriFire</fullName>
                </value>
                <value>
                    <fullName>G&amp;K</fullName>
                </value>
                <value>
                    <fullName>Lapco</fullName>
                </value>
                <value>
                    <fullName>NSA</fullName>
                </value>
                <value>
                    <fullName>Rasco</fullName>
                </value>
                <value>
                    <fullName>Riverside</fullName>
                </value>
                <value>
                    <fullName>Tyndale</fullName>
                </value>
                <value>
                    <fullName>Unifirst</fullName>
                </value>
                <value>
                    <fullName>Walls</fullName>
                </value>
                <value>
                    <fullName>Workrite</fullName>
                </value>
                <value>
                    <fullName>Wrangler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_Adjacency__c</fullName>
        <label>Department Adjacency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Geography</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goals_Promotion_Strategy__c</fullName>
        <inlineHelpText>Enter promotion strategy for Carhartt FR products and goals for this distributor.</inlineHelpText>
        <label>Goals / Promotion Strategy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Initial_Order__c</fullName>
        <inlineHelpText>Amount of initial order placed when distributor was approved</inlineHelpText>
        <label>Initial Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Key_Customers__c</fullName>
        <inlineHelpText>Enter key customers for this distributor (for FR)</inlineHelpText>
        <label>Key Customers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Leading_Line_Why__c</fullName>
        <inlineHelpText>Which FR line does this distributor lead with? Why?</inlineHelpText>
        <label>Leading Line / Why?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_of_Credit__c</fullName>
        <inlineHelpText>Credit line approved</inlineHelpText>
        <label>Line of Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Competitors__c</fullName>
        <label>Local Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Merchandising_Standards__c</fullName>
        <label>Merchandising Standards</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds</fullName>
                </value>
                <value>
                    <fullName>Meets</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes_and_Insights__c</fullName>
        <label>Notes and Insights</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Planned_Brand_Adjacency__c</fullName>
        <label>Planned Brand Adjacency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ariat</fullName>
                </value>
                <value>
                    <fullName>Bulwark</fullName>
                </value>
                <value>
                    <fullName>CAT</fullName>
                </value>
                <value>
                    <fullName>Cinch</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Dickies</fullName>
                </value>
                <value>
                    <fullName>Dragon Wear</fullName>
                </value>
                <value>
                    <fullName>DriFire</fullName>
                </value>
                <value>
                    <fullName>Key</fullName>
                </value>
                <value>
                    <fullName>Kuhl</fullName>
                </value>
                <value>
                    <fullName>Lapco</fullName>
                </value>
                <value>
                    <fullName>Lee</fullName>
                </value>
                <value>
                    <fullName>Levi</fullName>
                </value>
                <value>
                    <fullName>North Face</fullName>
                </value>
                <value>
                    <fullName>NSA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Private Label</fullName>
                </value>
                <value>
                    <fullName>Rasco</fullName>
                </value>
                <value>
                    <fullName>RedKap</fullName>
                </value>
                <value>
                    <fullName>Riverside/Affinity</fullName>
                </value>
                <value>
                    <fullName>Tecgen</fullName>
                </value>
                <value>
                    <fullName>Tyndale</fullName>
                </value>
                <value>
                    <fullName>Under Armor</fullName>
                </value>
                <value>
                    <fullName>Walls</fullName>
                </value>
                <value>
                    <fullName>Workrite</fullName>
                </value>
                <value>
                    <fullName>Wrangler/Riggs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Sales_Associate__c</fullName>
        <inlineHelpText>Primary Sales Associate - imported from SAP January 2013</inlineHelpText>
        <label>Prior Sales Associate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Carhartt_FR_business__c</fullName>
        <inlineHelpText>Projected amount of business that Carhartt FR will be for this distributor</inlineHelpText>
        <label>Projected Carhartt FR business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_FR__c</fullName>
        <formula>IF(ISNULL(AnnualRevenue),0,Projected_Carhartt_FR_business__c / AnnualRevenue)</formula>
        <inlineHelpText>Automatically calculated: Projected Carhartt FR business divided by Annual Revenue</inlineHelpText>
        <label>Projected FR %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Non_FR_business__c</fullName>
        <inlineHelpText>Enter projected amount ($) of business that Carhartt NON-FR will be for this distributor</inlineHelpText>
        <label>Projected Non-FR business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rating_Indicator__c</fullName>
        <formula>IMAGE( CASE( Rating, &quot;1 Star&quot;, &quot;/img/samples/stars_100.gif&quot;, &quot;2 Star&quot;, &quot;/img/samples/stars_200.gif&quot;, &quot;3 Star&quot;, &quot;/img/samples/stars_300.gif&quot;, &quot;4 Star&quot;, &quot;/img/samples/stars_400.gif&quot;, &quot;5 Star&quot;, &quot;/img/samples/stars_500.gif&quot;, &quot;/img/samples/stars_000.gif&quot;), &quot;rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Change the Rating picklist to update the number of stars displayed.</inlineHelpText>
        <label>Rating Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Rocky Mountain</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>TX &amp; NM</fullName>
                </value>
                <value>
                    <fullName>Gulf Coast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Account__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Account number in SAP system</inlineHelpText>
        <label>SAP Account #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channels__c</fullName>
        <inlineHelpText>Select one or more sales avenues</inlineHelpText>
        <label>Sales Avenues</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Field Sales</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0005 - Canada</fullName>
                </value>
                <value>
                    <fullName>0072 - Employee Sales</fullName>
                </value>
                <value>
                    <fullName>0074 - Promotions</fullName>
                </value>
                <value>
                    <fullName>0076 - Licensed Sales</fullName>
                </value>
                <value>
                    <fullName>0100 - Strategic</fullName>
                </value>
                <value>
                    <fullName>0101 - Regional</fullName>
                </value>
                <value>
                    <fullName>0102 - Internal</fullName>
                </value>
                <value>
                    <fullName>0103 - International</fullName>
                </value>
                <value>
                    <fullName>0104 - Industrial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <inlineHelpText>Select the sales rep for this account</inlineHelpText>
        <label>Sales Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 - GARY SMITH</fullName>
                </value>
                <value>
                    <fullName>02 - BONNIE HICKS</fullName>
                </value>
                <value>
                    <fullName>03 - LLOYD SCHAEFFER</fullName>
                </value>
                <value>
                    <fullName>05 - JERRY GOLDBERG</fullName>
                </value>
                <value>
                    <fullName>06 - SCOTT ECKSTEIN</fullName>
                </value>
                <value>
                    <fullName>07 - MIKE COTA</fullName>
                </value>
                <value>
                    <fullName>08 - CHRISTIAN MARIN</fullName>
                </value>
                <value>
                    <fullName>09 - MARK PURYEAR</fullName>
                </value>
                <value>
                    <fullName>10 - LINAS NARUSIS</fullName>
                </value>
                <value>
                    <fullName>11 - PAUL NOTO</fullName>
                </value>
                <value>
                    <fullName>12 - BRIAN BONIN</fullName>
                </value>
                <value>
                    <fullName>13 - STEVE BARTLETT</fullName>
                </value>
                <value>
                    <fullName>14 - BARBARA YUNG</fullName>
                </value>
                <value>
                    <fullName>15 - RICHARD WOODRUFF</fullName>
                </value>
                <value>
                    <fullName>16 - ALAN BANKS</fullName>
                </value>
                <value>
                    <fullName>17 - JACK MITCHELL</fullName>
                </value>
                <value>
                    <fullName>18 - MCCALL PARKER</fullName>
                </value>
                <value>
                    <fullName>19 - JON STURDEVANT</fullName>
                </value>
                <value>
                    <fullName>20 - CRAIG FLORO</fullName>
                </value>
                <value>
                    <fullName>21 - PETER COOK</fullName>
                </value>
                <value>
                    <fullName>22 - PAUL CLARK</fullName>
                </value>
                <value>
                    <fullName>24 - CLAY COIL</fullName>
                </value>
                <value>
                    <fullName>25 - KEN ROVINSKY</fullName>
                </value>
                <value>
                    <fullName>26 - AARON MASON</fullName>
                </value>
                <value>
                    <fullName>27 - ADAM HOLT</fullName>
                </value>
                <value>
                    <fullName>28 - ANDY KRAUSE</fullName>
                </value>
                <value>
                    <fullName>29 - JAY STERNAD</fullName>
                </value>
                <value>
                    <fullName>30 - RICH PUSATERI</fullName>
                </value>
                <value>
                    <fullName>32 - KIP WILLIAMSON</fullName>
                </value>
                <value>
                    <fullName>33 - PAUL MCCORMACK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Open_Opportunities__c</fullName>
        <label>Sum of Open Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.ForecastCategoryName</field>
            <operation>notEqual</operation>
            <value>Omitted, Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Target_Geography__c</fullName>
        <inlineHelpText>Select one or more states where this distributor does business</inlineHelpText>
        <label>Target Geography</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Market_s__c</fullName>
        <inlineHelpText>Select one or more markets this distributor is targeting</inlineHelpText>
        <label>Target Market(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>General Industry</fullName>
                </value>
                <value>
                    <fullName>Electrical Contractor</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Petrochemical</fullName>
                </value>
                <value>
                    <fullName>Utility Contract</fullName>
                </value>
                <value>
                    <fullName>Utility Co-op</fullName>
                </value>
                <value>
                    <fullName>Utility Investor Owned</fullName>
                </value>
                <value>
                    <fullName>Utility Municipality</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_from_Prospect__c</fullName>
        <inlineHelpText>Prospect Type - used to update Account Type field</inlineHelpText>
        <label>Type (from Prospect)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Opportunities__c</fullName>
        <label># of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Sales_Reps__c</fullName>
        <inlineHelpText>Number of B2B sales reps, if any</inlineHelpText>
        <label># of Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>